# composable-ai-advisors

./: .cursorrules  .gitignore  .markdownlint.jsonc  .markdownlint.yml  .pre-commit-config.yaml  ARCHITECTURE.md  BOOTSTRAP.md  DEPLOYMENT.md  Makefile.bak  PROJECT_SUMMARY.md  README-snippet.md  README.md  agents.md  caa-glossary.ttl  cloudbuild-frontend.yaml  composable-ai-advisors-architecture.dot  docker-compose.plantuml.yml  guidance.ttl  internal-lingo-cheatsheet.md  pyproject.toml  spore_registry.ttl
.cursor/context/: project-context.md
.cursor/rules/: architecture.mdc  coding-standards.mdc  mcp.mdc  ontology.mdc  tooling.mdc
.github/: CODEOWNERS
.github/workflows/: architecture-diagrams.yml  ci.yml  markdown-syntax.yml  mermaid-render.yml
.kiro/steering/: architecture.md  coding-standards.md  mcp.md  ontology.md
.mcp/: README.md  config.json
.mcp/domain-models/: cognition.md  compliance-officer.ttl  example-tools-domain.ttl  investments.md  legal-docs.md  orchestrator-constraints.ttl  research-analyst.ttl  sample.ttl  systems-architect.ttl
.mcp/shapes/: domain-model-shapes.ttl
.mcp/tools/: .gitkeep
.mcp/traces/: mcp_traces.ttl
backend/: Dockerfile  __init__.py  main.py  requirements-dev.txt  requirements.txt  service.yaml
docs/: BOOTSTRAP.md  SETUP_SUMMARY.md  asset-requirements.md  domain-model-markdown-spec.md
frontend/: Dockerfile  nginx.conf  package.json  service.yaml
scripts/: check_markdown_syntax.py  check_mermaid_markdown.py  cloudbuild-backend.yaml  deploy.sh  fix_markdown_syntax.py  run_plantuml.sh
tools/: node
(+82 files in other folders)
